# web3cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  ape-config.yaml  brownie-config.yaml  pyproject.toml  tox.ini  web3cli.example.yml
config/: web3cli.example.yml  web3cli.yml  web3cli.yml.example
src/web3cli/: __init__.py  exceptions.py  hooks.py  main.py
src/web3cli/controllers/: abi_controller.py  address.py  address_controller.py  app_key_controller.py  base.py  base_controller.py  call_controller.py  chain.py  chain_controller.py  config.py  config_controller.py  controller.py  db_controller.py  debug_controller.py  eralend_spam_controller.py  eralend_watch_controller.py  key.py  key_controller.py  keyfile_controller.py  misc_controller.py  network.py  replay_controller.py  rpc_controller.py  send_controller.py  signer.py  signer_controller.py  subscribe_controller.py  swap_controller.py  token_controller.py  transact_controller.py  tx_controller.py  user.py
src/web3cli/controllers/crud/: address_controller.py  chain_controller.py  contract_controller.py  history_controller.py  rpc_controller.py  signer_controller.py
src/web3cli/controllers/db/: address_controller.py  chain_controller.py  contract_controller.py  db_address_controller.py  db_base_controller.py  db_chain_controller.py  db_contract_controller.py  db_rpc_controller.py  db_signer_controller.py  db_tx_controller.py  rpc_controller.py  signer_controller.py  tx_controller.py
src/web3cli/controllers/defi/: compound_v2_controller.py
src/web3cli/core/: args.py  arguments.py  controllers.py  exc.py  exceptions.py  version.py
src/web3cli/core/helpers/: client_factory.py  config.py  crypto.py  database.py  format.py  input.py  networks.py  os.py  rpc.py  validation.py  web3.py  yaml.py
src/web3cli/core/models/: address.py  addresses.py  base_model.py  chain.py  contract.py  signer.py  timestamps_model.py  tx.py  types.py  user.py
src/web3cli/core/seeds/: avax_contract_seeds.py  bnb_contract_seeds.py  chain_seeds.py  chains.py  contract_seeds.py  eth_contract_seeds.py  types.py
src/web3cli/database/schema/: networks.py  rpcs.py
src/web3cli/framework/: __init__.py  app.py  controller.py  ext_print.py
src/web3cli/helpers/: args.py  chain.py  client_factory.py  config.py  crypto.py  database.py  factory.py  misc.py  render.py  seed.py  send.py  signer.py  telegram.py  token.py  tx.py  version.py
src/web3cli/src/: __init.py  __init__.py
src/web3cli/src/helpers/: networks.py
src/web3cli/templates/: balance.jinja2
src/web3cli/templates/address/: list.jinja2
src/web3cli/templates/network/: list.jinja2
src/web3core/: __init__.py  constants.py  db.py  exceptions.py  types.py
src/web3core/helpers/: abi.py  blocks.py  client_factory.py  contract.py  crypto.py  database.py  dex.py  format.py  input.py  misc.py  os.py  resolve.py  rpc.py  seed.py  telegram.py  tx.py  validation.py  yaml.py
src/web3core/models/: __init__.py  address.py  base_model.py  chain.py  contract.py  signer.py  timestamps_model.py  tx.py  types.py
src/web3core/seeds/: avax_contract_seeds.py  bnb_contract_seeds.py  chain_seeds.py  contract_seeds.py  contract_type_seeds.py  eth_contract_seeds.py
src/web3core/seeds/contracts/: __init__.py  arb_contract_seeds.py  avax_contract_seeds.py  base_contract_seeds.py  bnb_contract_seeds.py  era_contract_seeds.py  erat_contract_seeds.py  eth_contract_seeds.py  fantom_contract_seeds.py  gno_contract_seeds.py  manta_contract_seeds.py  op_contract_seeds.py  scroll_contract_seeds.py  sonic_contract_seeds.py  zkf_contract_seeds.py
tests/: conftest.py  helper.py  main.py  seed.py  seeder.py  test_main.py  test_web3cli.py
tests/ape/contracts/uniswap/: UniswapV2Router02.sol
tests/ape/scripts/: __init__.py  token.py
tests/ape/tests/: fixtures.py
tests/ape/tests/helpers/: ape.py  token.py  uniswap.py
tests/ape/tests/token/: test_ape_token_transfer.py  test_token_approve.py  test_token_transfer.py  test_token_transferFrom.py
tests/ape/tests/uniswap/: test_v2_add_liquidity.py  test_v2_create_pair.py
tests/brownie/: fixtures.py
tests/brownie/contracts/: .gitignore
tests/brownie/contracts/token/: Token.sol  Token_SafeMath.sol
tests/brownie/contracts/uniswap/: UniswapV2Factory.sol  UniswapV2Router01.sol  UniswapV2Router02.sol
tests/brownie/scripts/: db.py  token.py
tests/brownie/tests/: fixtures.py  helper.py
tests/brownie/tests/helpers/: uniswap.py
tests/brownie/tests/token/: test_token_approve.py  test_token_transfer.py  test_token_transferFrom.py
tests/brownie/tests/uniswap/: test_v2_add_liquidity.py  test_v2_create_pair.py  test_v2_swap.py
tests/controllers/: test_address.py  test_base.py  test_chain.py  test_key.py  test_misc.py  test_network.py  test_rpc.py  test_send.py  test_signer.py  test_tx.py
tests/controllers/db/: test_address.py  test_chain.py  test_contract.py  test_rpc.py  test_signer.py  test_tx.py
tests/core/helpers/: test_crypto.py
tests/encryption/: test_key.py
tests/helpers/: test_client_factory.py  test_crypto.py  test_factory.py  test_send.py
tests/resolvers/: test_resolve_address.py
tests/web3cli/: fixtures.py  test_db.py  test_main.py
tests/web3cli/controllers/: test_appkey_controller.py  test_call.py  test_call_controller.py  test_db_controller.py  test_key_controller.py  test_keyfile_controller.py  test_misc.py  test_misc_controller.py  test_replay_controller.py  test_send.py  test_send_controller.py  test_swap.py  test_transact.py  test_transact_controller.py  test_tx.py  test_tx_controller.py
tests/web3cli/controllers/crud/: test_address_controller.py  test_chain_controller.py  test_contract_controller.py  test_rpc_controller.py  (+3 more)
tests/web3cli/helpers/: test_client_factory.py  test_client_factory_helper.py  test_crypto_helper.py
tests/web3cli/resolvers/: test_resolve_address.py
tests/web3core/: fixtures.py
tests/web3core/helpers/: test_abi.py  test_abi_helper.py  test_crypto.py  test_resolve_address.py  test_validation_helper.py
tests/web3core/models/: test_contract_model.py
(+46 files in other folders)
