[project]
name = "web3cli"
version = "1.1.10"
description = "Interact with blockchains and smart contracts using the command line"
authors = [
    {name = "coccoinomane", email = "coccoinomane@gmail.com"},
]
readme = "README.md"
keywords = ["web3", "w3", "cli", "evm", "blockchain", "ethereum", "binance", "avalanche"]
license = {text = "MIT"}
requires-python = ">=3.9,<=3.11"
dependencies = [
    "cement>=3.0.8",
    "cement[colorlog]>=3.0.8",
    "cement[jinja2]>=3.0.8",
    "cement[yaml]>=3.0.8",
    "cement[tabulate]>=3.0.8",
    "web3>=6.0.0",
    "web3client>=1.1.15",
    "peewee>=3.15.3",
    "cryptography>=38.0.3",
    "ruamel.yaml>=0.17.21",
    "typing-extensions>=4.4.0",
    "eth-account>=0.8.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.982",
    "eth-ape[recommended-plugins]>=0.6.0",
    "isort>=5.11.3",
    "pre-commit>=2.20.0",
    "autoflake>=2.0.0",
    "black>=22.10",
    "types-requests>=2.31.0",
]

[tool.pdm.scripts]
w3 = {cmd = "w3", help = "Run the CLI in dev mode"}
w3eth = {cmd = "w3eth", help = "Run the CLI in dev mode, on Ethereum"}
w3bnb = {cmd = "w3bnb", help = "Run the CLI in dev mode, on BNB chain"}
w3avax = {cmd = "w3avax", help = "Run the CLI in dev mode, on Avalanche chain"}
w3matic = {cmd = "w3matic", help = "Run the CLI in dev mode, on Polygon POS chain"}
w3cro = {cmd = "w3cro", help = "Run the CLI in dev mode, on Cronos chain"}
w3arb = {cmd = "w3arb", help = "Run the CLI in dev mode, on Arbitrum One chain"}
w3era = {cmd = "w3era", help = "Run the CLI in dev mode, on zkSync Era chain"}
w3erat = {cmd = "w3erat", help = "Run the CLI in dev mode, on zkSync Era testnet chain"}
w3gno = {cmd = "w3gno", help = "Run the CLI in dev mode, on Gnosis (xDAI) chain"}

test = "ape test tests --network ::foundry"
test_verbose = "ape test tests -s --network ::foundry"
test_fast = "ape test tests -m 'not remote' --network ::foundry"

db_open = "open -a TablePlus $HOME/.web3cli/database/web3cli.sqlite"
db_open_test = "open -a TablePlus $HOME/.web3cli/database/web3cli_test.sqlite"
db_delete = "rm -rf $HOME/.web3cli/database"

docker = "pdm run clean && docker build -t web3cli:latest ."

release = "gh release create v{args} dist/web3cli-{args}.tar.gz dist/web3cli-{args}-py3-none-any.whl --generate-notes"

[project.scripts]
w3 = "web3cli.main:main"
w3eth = "web3cli.main:w3eth"
w3bnb = "web3cli.main:w3bnb"
w3avax = "web3cli.main:w3avax"
w3matic = "web3cli.main:w3matic"
w3cro = "web3cli.main:w3cro"
w3arb = "web3cli.main:w3arb"
w3era = "web3cli.main:w3era"
w3erat = "web3cli.main:w3erat"
w3gno = "web3cli.main:w3gno"

[project.urls]
homepage = "https://github.com/coccoinomane/web3cli"
repository = "https://github.com/coccoinomane/web3cli"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.build]
includes = ["src"]

[tool.black]
line-length = 88

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_calls = false
exclude = [
    '__pypackages__',
]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
markers = [
    "remote: tests that need an internet connection (deselect with '-m \"not remote\"')",
    "local: tests that require a local blockchain to be run, e.g. ganache, anvil or hardhat network (deselect with '-m \"not local\"')",
    "contracts: tests of the ape contracts",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.autoflake]
in_place = true
remove_all_unused_imports = true
ignore_pass_after_docstring = true
remove_unused_variables = false
